2009-12-28  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Skip test that is failing since it was checked in, and some tests
        that need results.

        * platform/gtk/Skipped:

2009-12-28  Kent Tamura  <tkent@chromium.org>

        Reviewed by Maciej Stachowiak.

        Implement HTML5 <article> element.
        https://bugs.webkit.org/show_bug.cgi?id=32942

        The new test file tests:
        - <p> closing,
        - Residual style, and
        - FormatBlock.

        * fast/html/article-element-expected.txt: Added.
        * fast/html/article-element.html: Added.
        * fast/html/script-tests/article-element.js: Added.

2009-12-27  Maciej Stachowiak  <mjs@apple.com>

        Rubber stamped by Adam Barth.

        Put media/audio-delete-while-step-button-clicked.html back in the mac skipped list because
        I think it's making other media tests fail sporadically.

        * platform/mac-tiger/Skipped:
        * platform/mac/Skipped:

2009-12-27  Jakub Wieczorek  <faw217@gmail.com>

        Reviewed by Eric Seidel.

        [Qt] Support upload progress events in XMLHttpRequest
        https://bugs.webkit.org/show_bug.cgi?id=32969

        Make QNetworkReplyHandler report the upload progress to the client.

        Already covered by tests:
        http/tests/xmlhttprequest/upload-onload-event.html
        http/tests/xmlhttprequest/upload-onloadstart-event.html
        http/tests/xmlhttprequest/upload-progress-events.html
        http/tests/xmlhttprequest/upload-onprogress-event.html

        which have been unskipped.

        * platform/qt/Skipped:

2009-12-27  Maciej Stachowiak  <mjs@apple.com>

        Rubber stamped by Adam Barth.

        Add media/audio-delete-while-step-button-clicked.html back to the Tiger skipped list.

        * platform/mac-tiger/Skipped:

2009-12-27  Maciej Stachowiak  <mjs@apple.com>

        Rubber stamped by Adam Barth.
